# C-Library

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  cpplib.h  example.txt  hey.txt  main  main.c  test  test.cpp  type.h  vector.c  vector.h
examples/: custom-copy-constructors.c  custom-destructors.c  custom-printers.c  macros.c  sets.c  strings.c  tuples.c  vectors.c
include/: calgorithm.h  cdictionary.h  cpair.h  cpplib.h  cptr.h  cset.h  cstring.h  ctuple.h  ctypes.h  cvector.h
src/: calgorithm.c  cdictionary.c  cpair.c  cprinter.c  cset.c  cstring.c  ctuple.c  cvector.c
test.dSYM/Contents/Resources/DWARF/: test
tests/: CMakeLists.txt  test_pair.c  test_set.c  test_string.c  test_tuple.c  test_vector  test_vector.c
